implement Blue-Green deployment strategy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Order Service CI/CD - Blue Green
 on:
   push:
     branches:
-      - master
+      - master  # or 'main' if applicable
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -15,60 +15,69 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 🧾 Checkout source code
-      - name: Checkout code
+      # 🧾 Step 1: Checkout the code
+      - name: 🧾 Checkout code
         uses: actions/checkout@v3
 
-      # 🔐 Configure AWS credentials for CLI + EKS access
-      - name: Configure AWS credentials
+      # 🔐 Step 2: Configure AWS credentials
+      - name: 🔐 Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # ⚙️ Set up kubectl CLI
-      - name: Set up kubectl
+      # ⚙️ Step 3: Set up kubectl
+      - name: ⚙️ Set up kubectl
         uses: azure/setup-kubectl@v3
 
-      # 📡 Update kubeconfig to connect to the EKS cluster
-      - name: Update kubeconfig for EKS
+      # 📡 Step 4: Update kubeconfig for EKS
+      - name: 📡 Update kubeconfig for EKS
         run: aws eks update-kubeconfig --region $AWS_REGION --name $EKS_CLUSTER_NAME
 
-      # 🐳 Authenticate to Docker Hub
-      - name: Log in to Docker Hub
+      # 🐳 Step 5: Docker login
+      - name: 🐳 Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      # 🏗️ Build and push Docker image for order-service
-      - name: Build and push Docker image
+      # 🏗️ Step 6: Build and push Docker image
+      - name: 🏗️ Build and push Docker image
         run: |
           docker build -t $IMAGE_NAME:latest .
           docker push $IMAGE_NAME:latest
 
-      # 🚀 Deploy Green version of order-service
-      - name: Deploy Green Version to EKS
-        run: kubectl apply -f k8s/order-service/order-service-green.yaml
+      # 🚀 Step 7: Deploy Green Version to EKS
+      - name: 🚀 Deploy Green Version
+        run: |
+          kubectl apply -f k8s/order-service/order-service-green.yaml
 
-      # ✅ Wait until Green pod is ready
-      - name: Wait for Green Pod to be Ready
+      # ✅ Step 8: Wait for Green pod readiness
+      - name: ✅ Health Check on Green
         run: |
           GREEN_POD=$(kubectl get pods -l app=order-service,version=green -o jsonpath="{.items[0].metadata.name}")
           kubectl wait --for=condition=Ready pod/$GREEN_POD --timeout=90s
 
-      # 🔁 Switch service selector to point to Green deployment
-      - name: Switch Service to Green
+      # 🗃 Step 9: Run Prisma migrate inside Green pod
+      - name: 🗃 Run Prisma migrate deploy in Green Pod
+        run: |
+          GREEN_POD=$(kubectl get pods -l app=order-service,version=green -o jsonpath="{.items[0].metadata.name}")
+          kubectl exec $GREEN_POD -- npx prisma migrate deploy
+
+      # 🔁 Step 10: Switch Service to Green
+      - name: 🔁 Switch Service to Green (Blue-Green switch)
         run: |
           kubectl patch svc order-service -p '{"spec": {"selector": {"app": "order-service", "version": "green"}}}'
 
-      # 🔄 Restart green deployment (optional but safe for Blue-Green)
-      - name: Rollout restart green deployment
+      # 🔄 Step 11: Restart deployment to ensure update
+      - name: 🔄 Rollout restart of Order Service
         run: |
           kubectl rollout restart deployment order-service-green
 
-      # 🧹 Clean up Blue deployment
-      - name: Delete Blue Deployment
+      # 🧹 Step 12: Clean up old Blue deployment
+      - name: 🧹 Optionally Clean Up Blue Version
         if: success()
-        run: kubectl delete deployment order-service-blue || true
+        run: |
+          kubectl delete deployment order-service-blue || true
+
 
 #################################################################
 # 🚦 Blue-Green Strategy Summary:
