--- a/k8s/order-service/order-service-green.yaml
+++ b/k8s/order-service/order-service-green.yaml
@@ -24,5 +24,5 @@ spec:
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
-                  name: order-service-secret
+                  name: db-secret
                   key: DATABASE_URL
